# oai-monarch-plugin

./: .cruft.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  build_image.sh  dev_run.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.sh  run_test_queries.sh  test_queries.sh  unit_tests.sh
.github/workflows/: build_image.yaml  deploy-docs.yml  qc.yml
.well-known/: ai-plugin.json
assets/: figures_keynote.key
docs/: conf.py  index.rst
oai_monarch_plugin/: main.py
src/oai_monarch_plugin/: __init__.py  cli.py  logger_config.py  main.py  middlewares.py
src/oai_monarch_plugin/.well-known/: ai-plugin.json
src/oai_monarch_plugin/routers/: config.py  disease_to_gene.py  disease_to_phenotype.py  entity.py  gene_to_disease.py  gene_to_phenotype.py  models.py  phenotype_profile_search.py  phenotype_to_disease.py  phenotype_to_gene.py  search.py  utils.py
tests/: __init__.py  conftest.py  test_endpoints.py  test_pub_info.py
