[tool.poetry]
name = "oai-monarch-plugin"
version = "0.1.0"
description = ""
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
readme = "README.md"
packages = [{include = "oai_monarch_plugin"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
httpx = "^0.24.0"
uvicorn = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
