[tool.poetry]
name = "oai_monarch_plugin"
version = "0.1.0"
description = "oai-monarch-plugin"
authors = ["Shawn O'Neil <shawn@tislab.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^65.5.0"
tox = "^3.25.1"
click = "^8.1.3"
importlib-metadata = "^4.8.0"
httpx = "^0.24.0"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}

[tool.poetry.scripts]
oai-monarch-plugin = "oai_monarch_plugin.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.28.2"
uvicorn = "^0.21.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
